<resources>
    <string name="app_name">Act 4 Final</string>
    <string name="tEmail">Email :</string>
    <string name="var1">Ini Pesan</string>
    <string name="bsignin">Sign-in</string>
    <string name="tlogin">LOGIN</string>
    <string name="tPassword">Password :</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Hasil Email</string>
    <string name="txPassword">Hasil Password</string>
    <string name="label2">Tampilan Kedua</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>


</resources>